styles.css
@font-face {
  font-family: "Cursed Timer ULiL";
  src: url("cursed-timer-ulil-font/CursedTimerUlil-Aznm.ttf");
}

@font-face {
  font-family: "Silkscreen";
  src: url("Silkscreen-fontfacekit/web fonts/silkscreen_normal_macroman/slkscr-webfont.woff")
    format("woff");
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  height: 100vh;
  background-image: linear-gradient(#2c3e50, #bdc3c7);
}

h1 {
  font-family: "Silkscreen", sans-serif;
  font-size: 4em;
  text-align: center;
  color: white;
  margin-top: 15px;
}

/*Game Window*/
#gameWindow {
  margin-top: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #dcdcdc;
  margin-left: auto;
  margin-right: auto;
  border: 4px outset #bebebe;
}

/*Header*/
#header {
  height: 70px;
  width: 94%;
  border: 4px inset #bebebe;
  margin: 20px;
  margin-top: 20px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.buttonContainer {
  background-color: lightgray;
  display: flex;
  align-self: flex-start;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdownContent {
  display: none;
  position: absolute;
}

.dropItem {
  border-top: 1px dashed black;
  border-bottom: 1px dashed black;
}

.dropBtn {
  color: purple;
  text-decoration: underline;
}

.dropdown:hover .dropdownContent {
  display: block;
}

.dropdown .dropItem:hover {
  background-color: whitesmoke;
}

button {
  margin-left: 8px;
  width: 95px;
  font-weight: normal;
  font-size: 1em;
  text-align: left;
  border-radius: 0%;
  border: none;
  border-right: 1px solid black;
  background-color: lightgray;
}

/*Grid Board*/
#board {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-bottom: 20px;
  border: 4px inset #bebebe;
}

.cell {
  width: 35px;
  height: 35px;
  font-size: 1.4em;
  font-weight: 900;
  border: 4px outset #bebebe;
  display: flex;
  justify-content: center;
  align-items: center;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}

.bombSprite,
.flagSprite,
.cellSprite {
  width: 25px;
  height: 25px;
}

.bombSprite {
  display: none;
}

.headerItem {
  width: 95px;
  height: 50px;
  background-color: black;
  color: red;
  font-family: "Cursed Timer ULiL", sans-serif;
  font-size: 3em;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-right: 8px;
  margin-left: 8px;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}

#timer {
  width: 95px;
}

#smileyface {
  width: 50px;
  height: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 3px outset #bebebe;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}

#face {
  width: 50px;
  height: 50px;
}

